Style improvements: Add missing Zodiac/Element icons, fix Alignment

--- a/src/style/common.css
+++ b/src/style/common.css
@@ -1,6 +1,5 @@
 .elementIcon {
   width: 30px;
-  vertical-align: middle;
 }
 
 .gems-count-details {
@@ -8,6 +7,13 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 5px;
+}
+
+.gems-count-details > span {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 0.5ch;
 }
 
 .upgrade-girl {
