--- a/src/style/game-extension.css
+++ b/src/style/game-extension.css
@@ -39,3 +39,8 @@
 .App.game-extension.hidden {
   visibility: hidden;
 }
+
+.game-extension * {
+  /** Override the general style rule from the game, that uses a global bottom v-align */
+  vertical-align: initial;
+}
