--- a/src/style/harem.css
+++ b/src/style/harem.css
@@ -12,6 +12,10 @@
 
 .gems-layout > div {
   padding: 5px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 0.5ch;
 }
 
 /** Toolbar */
@@ -52,6 +56,13 @@
 .harem-toolbar > .quick-filters > p {
   padding: 0px;
   margin: 0px;
+}
+
+.harem-toolbar > .quick-filters > .toggle0pose {
+  display: flex;
+  flex-direction: row;
+  gap: 0.5ch;
+  align-items: center;
 }
 
 .harem-toolbar > .clear-filters > .hh-action-button {
